edit todo and updated mental state with overthinking

--- a/mood-todo-tracker/index.html
+++ b/mood-todo-tracker/index.html
@@ -41,6 +41,7 @@
             <div id="mental-state-options" class="state-options">
                 <button class="state-btn" data-state="Sick">Sick</button>
                 <button class="state-btn" data-state="Meh">Meh</button>
+                <button class="state-btn" data-state="Overthinking">Overthinking</button>
                 <button class="state-btn" data-state="Neutral">Neutral</button>
                 <button class="state-btn" data-state="Focused">Focused</button>
             </div>
