--- a/mood-todo-tracker/index.html
+++ b/mood-todo-tracker/index.html
@@ -16,6 +16,9 @@
             <h2 id="current-date"></h2>
             <button id="next-day">Next Day &gt;</button>
         </div>
+        <div class="theme-toggle-container">
+            <button id="theme-toggle">Toggle Dark Mode</button> 
+        </div>
         <div class="import-export">
             <button id="export-data">Export Data</button>
             <button id="import-data">Import Data</button>
