--- a/mood-todo-tracker/index.html
+++ b/mood-todo-tracker/index.html
@@ -4,29 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Tracker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Daily Tracker</h1>
+    <div class="top-bar">
+        <div class="top-bar-left">
+            <h1>Daily Tracker</h1>
+        </div>
+        <div class="top-bar-center">
+            <div class="date-navigation">
+                <button id="prev-day" class="icon-btn" title="Previous Day"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 18l-6-6 6-6"/></svg></button>
+                <h2 id="current-date"></h2>
+                <button id="next-day" class="icon-btn" title="Next Day"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l6-6-6-6"/></svg></button>
+            </div>
+        </div>
+        <div class="top-bar-right">
+            <button id="theme-toggle" class="icon-btn" title="Toggle Theme">
+                <svg class="theme-icon-light" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+                <svg class="theme-icon-dark" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+            </button> 
+            <button id="profile-button" class="icon-btn" title="Profile"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></button>
+        </div>
+    </div>
 
-    <div class="top-controls">
-        <div class="date-navigation">
-            <button id="prev-day">&lt; Prev Day</button>
-            <h2 id="current-date"></h2>
-            <button id="next-day">Next Day &gt;</button>
-        </div>
-        <div class="theme-toggle-container">
-            <button id="theme-toggle">Toggle Dark Mode</button> 
-        </div>
-        <div class="import-export">
-            <button id="export-data">Export Data</button>
+    <div id="overlay"></div>
+
+    <div id="profile-sidebar" class="sidebar">
+        <button id="close-sidebar" class="close-btn">&times;</button>
+        <h2>Settings</h2>
+        <div class="sidebar-section">
+            <h3>Data Management</h3>
             <button id="import-data">Import Data</button>
             <input type="file" id="import-file-input" accept=".json" style="display: none;">
+            <button id="export-data">Export Data</button>
+        </div>
+        <div class="sidebar-section">
+            <h3>LLM API Key</h3>
+            <label for="api-key-input">Google AI API Key</label>
+            <input type="password" id="api-key-input" placeholder="Enter your API key...">
+            <button id="save-api-key">Save Key</button>
         </div>
     </div>
 
     <div class="container">
+        <div class="add-todo-section">
+            <h2>Add Todo</h2>
+            <div class="add-todo-wrapper">
+                <input type="text" id="todo-input" placeholder="Add a new todo...">
+                <button id="add-todo" class="icon-btn" title="Add Todo"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg></button>
+            </div>
+        </div>
+
+        <div class="brain-dump-section">
+            <h2>Brain Dump</h2>
+            <textarea id="brain-dump-input" placeholder="Dump all your thoughts here..."></textarea>
+            <button id="analyze-tasks">Analyze and Add Task</button>
+        </div>
+
+        <div class="pending-section">
+            <h3>Pending</h3>
+            <ul id="pending-list" class="todo-list"></ul>
+        </div>
+
+        <div class="completed-section">
+            <h3>Completed</h3>
+            <ul id="completed-list" class="todo-list"></ul>
+        </div>
+
         <div class="mood-section">
             <h2>Today's Mood</h2>
             <div id="mood-options" class="mood-options">
@@ -43,7 +91,6 @@
             <h2>Mental State</h2>
             <div id="mental-state-options" class="state-options">
                 <button class="state-btn" data-state="Sick">Sick</button>
-                <button class="state-btn" data-state="Meh">Meh</button>
                 <button class="state-btn" data-state="Overthinking">Overthinking</button>
                 <button class="state-btn" data-state="Neutral">Neutral</button>
                 <button class="state-btn" data-state="Focused">Focused</button>
@@ -51,26 +98,19 @@
             <p>Current Mental State: <span id="display-mental-state">N/A</span></p>
         </div>
 
-        <div class="todo-section">
-            <h2>Today's Todos</h2>
-            <input type="text" id="todo-input" placeholder="Add a new todo...">
-            <button id="add-todo">Add Todo</button>
-            
-            <div class="todo-columns">
-                <div class="todo-column">
-                    <h3>Pending</h3>
-                    <ul id="pending-list" class="todo-list"></ul>
-                </div>
-                <div class="todo-column">
-                    <h3>Completed</h3>
-                    <ul id="completed-list" class="todo-list"></ul>
-                </div>
-            </div>
-        </div>
-
         <div class="notes-section">
             <h2>Daily Notes</h2>
             <textarea id="daily-notes" placeholder="Jot down your thoughts for the day..."></textarea>
+        </div>
+
+        <div class="calendar-section">
+            <h2>Activity Calendar</h2>
+            <div class="calendar-nav">
+                <button id="prev-month" class="icon-btn" title="Previous Month"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 18l-6-6 6-6"/></svg></button>
+                <span id="calendar-month-year">Month Year</span>
+                <button id="next-month" class="icon-btn" title="Next Month"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l6-6-6-6"/></svg></button>
+            </div>
+            <div id="calendar-grid" class="calendar-grid"></div>
         </div>
 
         <div class="dashboard-section">
@@ -87,16 +127,6 @@
             </div>
             <p>Tasks on <span id="selected-date-display"></span>: Completed: <span id="completed-count">0</span> / <span id="total-count">0</span></p>
         </div>
-    </div>
-
-    <div class="calendar-section">
-        <h2>Activity Calendar</h2>
-        <div class="calendar-nav">
-            <button id="prev-month">&lt; Prev</button>
-            <span id="calendar-month-year">Month Year</span>
-            <button id="next-month">Next &gt;</button>
-        </div>
-        <div id="calendar-grid" class="calendar-grid"></div>
     </div>
 
     <script src="script.js"></script>
