analyze brain dump in progress

--- a/mood-todo-tracker/index.html
+++ b/mood-todo-tracker/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="sidebar-section">
             <h3>LLM API Key</h3>
-            <label for="api-key-input">Google AI API Key</label>
+            <label for="api-key-input">OpenAI API Key</label>
             <input type="password" id="api-key-input" placeholder="Enter your API key...">
             <button id="save-api-key">Save Key</button>
         </div>
